--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 }
 body{
     width: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
 .main-container >div{
     width: 100%;
-    border: 1px solid black;
+   
     display: grid;
   
 }
@@ -53,14 +54,14 @@ body{
 }
 .grid-2 >div{
     display: grid;
-    border: 1px solid black;
+
     /* background-color: bisque; */
 }
 
 .grid-3 >div{
     display: grid;
      justify-items: center;
-    border: 1px solid black;
+  
 
     
 }
@@ -258,7 +259,7 @@ width: 75%;
 
  .floppy-grid{
     align-self: self-end;
-    
+    color: white;
    height: 70%;
  }
 
@@ -269,10 +270,11 @@ width: 75%;
     width: 100%;
     display: grid;
     justify-content: center;
-    border: 1px solid black;
+
     align-self: center;
     justify-items: center;
     align-items: center;
+    
  }
 
  .purple-circle img{
@@ -282,12 +284,37 @@ width: 75%;
 
  .icloud-grid h3{
     text-align: center;
+    font-size: 2em;
+   
  }
+ .icloud-grid {
+    color: white;
+   
+   
+ }
+
+ .icloud-grid p{
+    color: white;
+    font-size: 1.1em;
+    width: 80%;
+   
+ }
+
 
  .icloud-button{
 
-    background-color: rgb(226, 211, 1);
+    background-color: #ffc80a;
     border-radius: 15px;
+    
+    border: 0px solid black;
+    border-radius: 25px;
+    padding: 20px;
+    font-size:0.8em;
+    font-weight: 700;
+    letter-spacing: 2.4px;
+    text-transform: uppercase;
+    
+
  }
 
 
@@ -295,4 +322,182 @@ width: 75%;
     display: grid;
     justify-items: center;
     margin-top: 10px;
+   
  }
+
+
+ .controller-container{
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+.controller-container * {
+    display: grid;
+    justify-items: center;
+    align-self: center;
+    margin-bottom: 10px;
+}
+
+.controller-container img {
+    width: 70%;
+
+}
+
+.controller-container h3{
+    font-size: 1.6em;
+    font-weight: 400;
+
+   
+}
+
+
+.controller-container a{
+    font-size: 1em;
+    font-weight: 400;
+    color: #18b1d3;
+    
+   
+}
+
+.laptop{
+    display: grid;
+    grid-template-rows: 1fr 2.2fr 5fr ;
+    align-items: end;
+    justify-items: center;
+    background-color: #93b6b7;
+}
+
+.laptop-button{
+    align-self: normal;
+    justify-self: left;
+  
+
+}
+.laptop-button > button {
+    margin: 10px;
+    background-color: #fa684f;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 10px;
+    letter-spacing: 2px;
+    font-size: 0.6em;
+    color: white;
+    border: 0px solid black;
+    
+ 
+}
+.laptop img{
+ width: 80%;
+}
+
+.laptop div{
+    display: grid;
+}
+
+.laptop h3{
+    color: white;
+    font-size: 1.7em;
+    margin-bottom: 10px;
+
+}
+
+.twitter-grid{
+   color: white;
+    background-color: #38d5f4;
+     
+}
+
+.twitter-circle{
+    background-color: #35cfed;
+    width: 60%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    border-radius: 60%;
+    
+}
+
+
+.twitter-grid img{
+    width: 25%;
+}
+
+.twitter-grid h3{
+    width: 45%;
+    justify-self: center;
+   align-self: start;
+   text-align: center;
+}
+
+.better-button-container{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.better-button-container p{
+    font-size: 1.5em;
+    width: 80%;
+    
+}
+
+.better-button >button {
+    margin: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 10px;
+    letter-spacing: 2px;
+    font-size: 0.6em;
+    align-items: end;
+    background-color: #7bc424;
+    border-radius: 10px;
+    border: 0px solid black;
+    color: white;
+}
+
+.better-button-p{
+    display: grid;
+   justify-items: end;
+    
+    
+}
+
+.better-button {
+   align-self: end;
+}
+
+.tv-section{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    background-color: #2c2c2c;
+  
+}
+
+.tv-paragrah{
+    justify-self: start;
+     
+    display: grid;
+    align-content: center;
+    color: white;
+    width: 45%;
+    font-size: 1.2em;
+}
+
+.tv-img-container{
+    display: grid;
+    justify-items: center;
+    width: 100%;
+}
+.tv-img-container img{
+ width:60%;
+
+ 
+}
+
+
+.g2-content-container-2 span{
+
+    color: rgb(169, 169, 169);
+    font-size: 0.8em;
+}
