--- a/style.css
+++ b/style.css
@@ -277,6 +277,20 @@ width: 75%;
     
  }
 
+ .Popular-title{
+    background-color: #8b72b6;
+    margin-top: 4;
+
+    border-radius: 25px;
+    width: 30%;
+    text-align: center;
+ }
+
+ .Popular-title::before{
+    font-family: FontAwesome;
+    padding-right: 3px;
+    content: "\f024";color: #ffff00;
+ }
  .purple-circle img{
 
     width: 60%;
